# HireME

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/old_prompts/: resume_sys_prompt.md
assets/profiles/default_profile/: context.md  profile.yaml
assets/profiles/empty_profile/: context.md  profile.yaml
assets/prompts/: costar_template.md  job_agent_system_prompt.md  resume_agent_system_prompt.md
assets/rendercv/: base_template.yaml  settings.yaml
docs/examples/: cli_examples.md
src/hireme/: __init__.py  config.py  lgfuse_prompts.py
src/hireme/agents/: job_agent.py  prompts.py  resume_agent.py
src/hireme/cli/: __init__.py  main.py
src/hireme/cli/commands/: db_cli.py  job_agent_cli.py  profile_cmds.py  resume_agent_cli.py
src/hireme/cli/commands/profile/: __init__.py  common.py  create.py  delete.py  setprofile.py  show.py
src/hireme/db/: __init__.py  database.py  schemas.py
src/hireme/scraper/: __init__.py  common.py  offers_finder.py  offers_parser.py  playwright_scraper.py
src/hireme/scrapping/: __init__.py  common.py  offers_finder.py  offers_parser.py
src/hireme/utils/: common.py  models.py  providers.py  rendercv_helpers.py
src/hireme/utils/models/: models.py  resume_models.py
tests/: scrapper_test.py
tests/cli/: conftest.py  test_db_cli.py  test_job_cli.py  test_resume_cli.py
tests/scraper/: __init__.py  conftest.py  test_offers_finder.py  test_offers_parser.py  test_playwright_scraper.py
