[project]
name = "hireme"
version = "0.1.0"
description = "An agentic job application assistant."
readme = "README.md"
authors = [
    { name = "Lime", email = "66lime7@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.44.0",
    "pydantic-ai-slim[logfire]>=1.44.0",
    "pylint-pydantic>=0.4.1",
    "pypdf>=6.6.0",
    "rendercv[full]>=2.6",
    "rich>=14.2.0",
    "selenium>=4.39.0",
    "streamlit>=1.53.0",
    "structlog>=25.5.0",
    "typer>=0.21.1",
    "watchdog>=6.0.0",
]

[project.scripts]
hireme-web = "hireme:main"
# hireme = "hireme.cli.main:main"
hireme = "hireme.cli.main:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "beaupy>=3.11.0",
    "textual-dev>=1.8.0",
]
